--- a/shopcart-service-demo/pom.xml
+++ b/shopcart-service-demo/pom.xml
@@ -35,6 +35,10 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
