公共模块包新增

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>shopcart-service-demo</module>
         <module>order-service-demo</module>
         <module>goods-service-demo</module>
+        <module>service-common</module>
     </modules>
 
     <dependencyManagement>
