将网关服务整合到服务中心

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>order-service-demo</module>
         <module>goods-service-demo</module>
         <module>service-common</module>
+        <module>gateway-demo</module>
+        <module>gateway-demo2</module>
     </modules>
 
     <dependencyManagement>
