Spring Cloud Gateway内置断言工厂

--- a/gateway-demo/pom.xml
+++ b/gateway-demo/pom.xml
@@ -20,10 +20,19 @@
     </properties>
 
     <dependencies>
-        <!-- 引入gateway -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
 
     </dependencies>
