--- a/gateway-demo/src/main/resources/application.yml
+++ b/gateway-demo/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8137
+  port: 8147
 spring:
   application:
     name: newbee-cloud-gateway-service
@@ -19,14 +19,13 @@ spring:
           uri: lb://newbee-cloud-goods-service
           order: 1
           predicates:
-            - Path=/goods
-            - Query=goodsId,^\+?[1-9][0-9]*$
-        - id: goods-service-route2
-          uri: lb://newbee-cloud-goods-service
-          order: 0
+            - Path=/newbee-cloud/goods/**
+          filters:
+            - StripPrefix=1
+        - id: shopcart-service-route
+          uri: lb://newbee-cloud-shopcart-service
+          order: 1
           predicates:
-            - Path=/goods/page/**
-            - Method=POST
-
-
-
+            - Path=/shop-cart/**
+          filters:
+            - RedirectTo=302,https://juejin.cn
