创建基础工程

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <modules>
         <module>service-demo</module>
         <module>service-demo2</module>
-        <module>nacos-provider-demo</module>
+        <module>nacos-config-demo</module>
         <module>nacos-consumer-demo</module>
     </modules>
 
