多配置文件读取

--- a/nacos-config-demo/src/main/resources/bootstrap.yml
+++ b/nacos-config-demo/src/main/resources/bootstrap.yml
@@ -12,3 +12,10 @@ spring:
         file-extension: yml
         username: nacos
         password: nacos
+        extension-configs:
+          - data-id: switch-config.yml
+            group: COMMON_GROUP
+            refresh: true
+          - data-id: redis-config.yml
+            group: COMMON_GROUP
+            refresh: true
