--- a/goods-service-demo/src/main/resources/application.yml
+++ b/goods-service-demo/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   port: 8091
 
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/test_distribution_goods_db?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 123456
   application:
     name: newbee-cloud-goods-service
   cloud:
