--- a/shopcart-service-demo/src/main/resources/application.yml
+++ b/shopcart-service-demo/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 server:
-  port: 8092
+  port: 8154
 
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/test_distribution_cart_db?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 123456
   application:
     name: newbee-cloud-shopcart-service
   cloud:
