--- a/shopcart-service-demo/pom.xml
+++ b/shopcart-service-demo/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- Seata 依赖包 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
