--- a/goods-service-demo/pom.xml
+++ b/goods-service-demo/pom.xml
@@ -54,5 +54,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
+		<!-- Seata 依赖包 -->
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+		</dependency>
+
+
 	</dependencies>
 </project>
