--- a/order-service-demo/src/main/resources/application.yml
+++ b/order-service-demo/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8157
+  port: 8164
 
 feign:
   client:
@@ -22,3 +22,21 @@ spring:
         server-addr: localhost:17748
         username: nacos
         password: nacos
+seata:
+  enabled: true
+  # 三个不同的服务命名为不同的名称
+  application-id: order-server
+  # 事务分组配置
+  tx-service-group: test_save_order_group
+  service:
+    vgroup-mapping:
+      test_save_order_group: default
+  registry:
+    type: nacos
+    nacos:
+      application: seata-server
+      server-addr: localhost:17748
+      username: nacos
+      password: nacos
+      group: DEFAULT_GROUP
+      cluster: default
