整合Spring Cloud Sleuth编码

--- a/order-service-demo/pom.xml
+++ b/order-service-demo/pom.xml
@@ -54,6 +54,13 @@
             <artifactId>service-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <!-- Sleuth依赖项 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
